fix billboard gap at bottom remove "MORE>>" from Search results that are just Promoted Result CPTs since they are just link containers

--- a/_/css/style.css
+++ b/_/css/style.css
@@ -1083,6 +1083,9 @@ article.search-results {
 	position: relative;
 }
 
+.billboard .slider-wrapper {
+	margin-bottom: -22px;
+}
 
 .ie7 #billboard-slider img.nivo-main-image {
 	height: auto !important;
